Fix assert for certain dashed strokes in curve renderer

If the dashOffset was equal to the total length of the dash pattern,
certain pen widths could lead to an assert because of numerical
accuracy limitations. (fmod() would yield a remainder when dividing the
dashOffset by the pattern length sum, even though they should be equal).

Fixes: QTBUG-123805
Pick-to: 6.7
Change-Id: I17a4d5d39bcee128b893d3a7bef98c0816236ee4
Reviewed-by: Paul Olav Tvete <paul.tvete@qt.io>